[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main Menu/Main Menu.gd" type="Script" id=1]

[node name="Main Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_top = 120.0
margin_right = 2.0
margin_bottom = 134.0
rect_scale = Vector2( 2, 2 )
text = "The Magical Forest"

[node name="Play" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_top = 230.0
margin_right = 2.0
margin_bottom = 250.0
rect_scale = Vector2( 2, 2 )
text = "Play"
flat = true

[node name="Options" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 30.0
margin_right = 3.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
text = "Options"
flat = true

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 430.0
margin_right = 3.0
margin_bottom = 450.0
rect_scale = Vector2( 2, 2 )
text = "Exit"
flat = true

[node name="Button" type="Button" parent="."]
margin_left = 298.0
margin_top = 532.0
margin_right = 523.0
margin_bottom = 552.0
rect_scale = Vector2( 2, 2 )
text = "!!! Generating may take a while !!!"
flat = true

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
